# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [2.1.0] - 2023-10-28

### Added

- Add comment settings
- Make icon background transparent

### Fixed

- Fix incorrect timestamp conversion for hours

## [2.0.1] - 2023-10-18

### Fixed

- Resize canvas to video container dimensions
- Limit quota by setting max number of fetches per video load

## [2.0.0] - 2023-10-09

### Fixed

- Load comments when navigating throughout YouTube.

### Changed

- Changed comments to display based on video timestamp from comment.

## [1.0.0] - 2019-11-04

### Added

- Initial release