@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link href="./bootstrap.min.css" rel="stylesheet" />
+    <style>
+      body {
+        width: 200px;
+      }
+    </style>
   </head>
 
   <body>
